--- a/src/app/main/components/event/event.component.html
+++ b/src/app/main/components/event/event.component.html
@@ -1,142 +1,3 @@
-<!-- <div class="container">
-    <p class="title">Данные о событии</p>
-    <div class="box">
-        <div class="box__data">
-            <div>  
-                <div class="flex">
-                    <p class="text__title">Статус события: </p>
-                    <p class="text__data">{{event?.status}}</p>
-                </div>
-                <div class="flex">
-                    <p class="text__title">Тип события: </p>
-                    <p class="text__data">{{event?.type}}</p>
-                </div>
-                <div class="flex">
-                    <p class="text__title">Вид спорта: </p>
-                    <p class="text__data">{{event?.sport}}</p>
-                </div>
-                <div class="flex">
-                    <p class="text__title">Место проведения: </p>
-                    <p class="text__data">{{event?.location.name}}, {{event?.location.address}}</p>
-                </div>
-                <div class="flex">
-                    <p class="text__title">Время начала: </p>
-                    <p class="text__data">{{event?.time_start | date: 'dd.MM.YYYY HH:mm'}}</p>
-                </div>
-                <div class="flex">
-                    <p class="text__title">Время окончания: </p>
-                    <p class="text__data">{{event?.time_end | date: 'dd.MM.YYYY HH:mm'}}</p>
-                </div>
-                <div class="flex">
-                    <p class="text__title">Цена: </p>
-                    <p class="text__data" style="color: #089F5F;">{{event?.price}}&#8381;</p>
-                </div>
-            </div>
-            <div>
-                <p *ngIf="!isAuth" class="dangerous">Чтобы проголосовать, войдите в систему</p>
-                <div class="box__btns" *ngIf="isAuth">
-                    <button class="btn" *ngIf="!event?.app_status_on_moderation" style="background: #089F5F; margin-right: 10px;" mat-raised-button (click)="sendApplicationTrue()">Приду</button>
-                    <button class="btn" *ngIf="!event?.app_status_refused" style="background: #9f0808;" mat-raised-button (click)="sendApplicationFalse()">Не приду</button>
-                </div>
-                <div class="box__tabs">
-                    <p class="tab" [ngClass]="{active: list.participants}" mat-raised-button (click)="viewParticipants()">Участники ({{event?.applications.accepted.length + event?.applications.on_moderation.length}})</p>
-                    <p class="tab" [ngClass]="{active: list.surveys}" mat-raised-button (click)="viewSurveys()">Не придут ({{event?.applications.refused.length}})</p>
-                    <p class="tab" [ngClass]="{active: list.guests}" mat-raised-button (click)="viewGuests()">Гости ({{event?.guests_count}})</p>
-                </div>
-
-                <div *ngIf="list.participants">
-                    <div *ngFor="let ev of event?.applications.accepted">
-                        <p class="surveys__title">
-                            <mat-icon style="color: #089F5F;" aria-hidden="false" aria-label="Example logout icon">done</mat-icon>
-                            {{ev.player.user.full_name}}
-                        </p>
-                    </div>
-                    <div *ngFor="let ev of event?.applications.on_moderation">
-                        <p class="surveys__title">
-                            <mat-icon style="color: #9f9508;" aria-hidden="false" aria-label="Example logout icon">pending</mat-icon>
-                            {{ev.user.full_name}}
-                        </p>
-                    </div>
-                    <div *ngFor="let ev of event?.applications.invited">
-                        <p class="surveys__title">
-                            <mat-icon style="color: #9f9508;" aria-hidden="false" aria-label="Example logout icon">pending</mat-icon>
-                            {{ev.user.full_name}}
-                        </p>
-                    </div>
-                </div>
-                <div *ngIf="list.surveys">
-                    <div *ngFor="let ev of event?.applications.refused">
-                        <p class="surveys__title">
-                            <mat-icon style="color: #9f0808;" aria-hidden="false" aria-label="Example logout icon">close</mat-icon>
-                            {{ev.user.full_name}}
-                        </p>
-                    </div>
-                    <div *ngFor="let ev of event?.applications.rejected">
-                        <p class="surveys__title">
-                            <mat-icon style="color: #9f0808;" aria-hidden="false" aria-label="Example logout icon">close</mat-icon>
-                            {{ev.user.full_name}}
-                        </p>
-                    </div>
-                </div>
-                <div *ngIf="list.guests">
-                    <div *ngFor="let guest of event?.guests">
-                        <p class="surveys__title">
-                            <mat-icon style="color: #089F5F;" aria-hidden="false" aria-label="Example logout icon">done</mat-icon>
-                            {{guest.name}}
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="box__data">
-            <p class="subtitle">Комментарии({{comments?.count}})</p>
-            <p *ngIf="!isAuth" class="dangerous">Чтобы написать комментарий, войдите в систему</p>
-            <form *ngIf="isAuth" [formGroup]="addCommentForm" (ngSubmit)="sendComment()">
-                <mat-form-field appearance="fill" class="textarea">
-                    <mat-label>Введите текст</mat-label>
-                    <textarea matInput
-                                cdkTextareaAutosize
-                                #autosize="cdkTextareaAutosize"
-                                cdkAutosizeMinRows="1"
-                                cdkAutosizeMaxRows="5"
-                                formControlName="comment"
-                                ></textarea>
-                </mat-form-field>
-                <button *ngIf="!isSend" class="icon__send" [disabled]="addCommentForm.invalid">
-                    <mat-icon style="color: #EEF5F8; margin-left: 20px;" aria-hidden="false" aria-label="Example send icon">send</mat-icon>
-                </button>
-                <button *ngIf="isSend" class="icon__send" type="button" (click)="sendChangeComment()">
-                    <mat-icon style="color: #EEF5F8; margin-left: 20px;" aria-hidden="false" aria-label="Example send icon">done</mat-icon>
-                </button>
-                <button *ngIf="!isSend" class="btn__send" mat-raised-button>Отправить</button>
-                <button *ngIf="isSend" class="btn__send" type="button" (click)="sendChangeComment()" mat-raised-button>Сохранить</button>
-            </form>
-            <p class="title__comment" (click)="openComment()">
-                <span *ngIf="!commentWindow">Открыть комментарии </span>
-                <span *ngIf="commentWindow">Закрыть комментарии </span>
-                <mat-icon *ngIf="!commentWindow" style="color: #EEF5F8; margin-left: 10px;" aria-hidden="false" aria-label="Example send icon">expand_more</mat-icon>
-                <mat-icon *ngIf="commentWindow" style="color: #EEF5F8; margin-left: 10px;" aria-hidden="false" aria-label="Example send icon">expand_less</mat-icon>
-            </p>
-            <div *ngIf="commentWindow" class="container__comment">
-                <div *ngFor="let comment of comments?.results.slice().reverse()">
-                    <div class="box__comment" [matMenuTriggerFor]="menu" (click)="openMenu(comment)">
-                        <span class="user__comment" style="user-select: none;">{{comment.user.full_name}}</span>
-                        <p class="text__comment">{{comment.comment}} <span style="user-select: none;" class="time__comment">{{comment.created_at | date: 'HH:mm'}}</span></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<mat-menu #menu="matMenu">
-    <button mat-raised-button style="width: 100%;" (click)="deleteComment()">Удалить сообщение</button>
-    <button mat-raised-button style="width: 100%;" (click)="changeComment()">Редактировать сообщение</button>
-</mat-menu> -->
-
-
-
 <div class="container">
     <div class="flex">
         <div class="data">
@@ -360,46 +221,7 @@
             </div>
         </div>
         <div class="chat" *ngIf="nav.chat">
-            
-            <div class="box__data">
-                <p class="subtitle">Комментарии({{comments?.count}})</p>
-                <p *ngIf="!isAuth" class="dangerous">Чтобы написать комментарий, войдите в систему</p>
-                <form *ngIf="isAuth" [formGroup]="addCommentForm" (ngSubmit)="sendComment()">
-                    <mat-form-field appearance="fill" class="textarea">
-                        <mat-label>Введите текст</mat-label>
-                        <textarea matInput
-                                    cdkTextareaAutosize
-                                    #autosize="cdkTextareaAutosize"
-                                    cdkAutosizeMinRows="1"
-                                    cdkAutosizeMaxRows="5"
-                                    formControlName="comment"
-                                    ></textarea>
-                    </mat-form-field>
-                    <button *ngIf="!isSend" class="icon__send" [disabled]="addCommentForm.invalid">
-                        <mat-icon style="color: #EEF5F8; margin-left: 20px;" aria-hidden="false" aria-label="Example send icon">send</mat-icon>
-                    </button>
-                    <button *ngIf="isSend" class="icon__send" type="button" (click)="sendChangeComment()">
-                        <mat-icon style="color: #EEF5F8; margin-left: 20px;" aria-hidden="false" aria-label="Example send icon">done</mat-icon>
-                    </button>
-                    <button *ngIf="!isSend" class="btn__send" mat-raised-button>Отправить</button>
-                    <button *ngIf="isSend" class="btn__send" type="button" (click)="sendChangeComment()" mat-raised-button>Сохранить</button>
-                </form>
-                <p class="title__comment" (click)="openComment()">
-                    <span *ngIf="!commentWindow">Открыть комментарии </span>
-                    <span *ngIf="commentWindow">Закрыть комментарии </span>
-                    <mat-icon *ngIf="!commentWindow" style="color: #EEF5F8; margin-left: 10px;" aria-hidden="false" aria-label="Example send icon">expand_more</mat-icon>
-                    <mat-icon *ngIf="commentWindow" style="color: #EEF5F8; margin-left: 10px;" aria-hidden="false" aria-label="Example send icon">expand_less</mat-icon>
-                </p>
-                <div *ngIf="commentWindow" class="container__comment">
-                    <div *ngFor="let comment of comments?.results.slice().reverse()">
-                        <div class="box__comment" [matMenuTriggerFor]="menu" (click)="openMenu(comment)">
-                            <span class="user__comment" style="user-select: none;">{{comment.user.full_name}}</span>
-                            <p class="text__comment">{{comment.comment}} <span style="user-select: none;" class="time__comment">{{comment.created_at | date: 'HH:mm'}}</span></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
+            <event-chat-service-page></event-chat-service-page>
         </div>
         <div class="control" *ngIf="nav.control">
             <h1 style="color: #FFFFFF;">control</h1>
@@ -417,8 +239,3 @@
         </div>
     </div>
 </div>
-
-<mat-menu #menu="matMenu">
-    <button mat-raised-button style="width: 100%;" (click)="deleteComment()">Удалить сообщение</button>
-    <button mat-raised-button style="width: 100%;" (click)="changeComment()">Редактировать сообщение</button>
-</mat-menu> -->
