add status in user

--- a/src/app/main/components/event/event.component.html
+++ b/src/app/main/components/event/event.component.html
@@ -165,7 +165,7 @@
                 </div>
 
                 <div *ngIf="view.accepted" class="participants__list">
-                    <div class="participants__cell" *ngFor="let application of applications" (click)="getUser(application.user.id)" 
+                    <div class="participants__cell" *ngFor="let application of applications" (click)="getUser(application)" 
                     [ngClass]="{
                         participants__cell_you: application.user_status.id == 0, 
                         participants__cell_create: application.user_status.id == 1,
@@ -226,11 +226,11 @@
         <div class="control" *ngIf="nav.control">
             <h1 style="color: #FFFFFF;">control</h1>
         </div>
-        <div class="user">
+        <div class="user" *ngIf="status">
             <div class="user__flex">
                 <div class="user__avatar"></div>
                 <div>
-                    <p class="user__status">[игрок]</p>
+                    <p class="user__status">[{{status}}]</p>
                     <p class="user__number">{{user?.phone_number}}</p>
                     <p class="user__email">{{user?.email}}</p>
                 </div>
