--- a/src/app/main/components/header/header.component.html
+++ b/src/app/main/components/header/header.component.html
@@ -71,7 +71,9 @@
         </div>
       
         <div class="router-outlet">
-            <router-outlet></router-outlet>
+            <div class="content">
+                <router-outlet></router-outlet>
+            </div>
         </div>
     </div>
 </ng-sidebar-container>
